[gd_scene load_steps=3 format=3 uid="uid://tw7k06bbbxk2"]

[ext_resource type="Script" uid="uid://clxy3avwab3cl" path="res://scripts/UI/assignation_scientifiques.gd" id="1_fs1uh"]
[ext_resource type="Texture2D" uid="uid://h8vpungsiv7a" path="res://assets/UI/tilesetT3.png" id="2_v4cla"]

[node name="AssignationScientifiques" type="MarginContainer"]
custom_minimum_size = Vector2(290, 100)
offset_right = 250.0
offset_bottom = 75.0
script = ExtResource("1_fs1uh")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 3

[node name="nine" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_v4cla")
region_rect = Rect2(320, 448, 64, 64)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/nine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -32.0
offset_right = 147.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/nine/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="nom" type="Label" parent="MarginContainer/nine/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "nom"
autowrap_mode = 2

[node name="nombreScient" type="Label" parent="MarginContainer/nine/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = "00"
autowrap_mode = 2

[node name="assignation" type="Button" parent="MarginContainer/nine/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_direction = 3
layout_mode = 2
text = "+"

[node name="desassignation" type="Button" parent="MarginContainer/nine/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_direction = 3
layout_mode = 2
text = "-"

[connection signal="pressed" from="MarginContainer/nine/MarginContainer/HBoxContainer/assignation" to="." method="_on_assignation_pressed"]
[connection signal="pressed" from="MarginContainer/nine/MarginContainer/HBoxContainer/desassignation" to="." method="_on_desassignation_pressed"]
